modifications to dashboard and signup pages

--- a/signup_main.html
+++ b/signup_main.html
@@ -64,9 +64,11 @@
       >
         <div>
           <h3 class="title">
-            <a href="signup.html" style="color: #00304e">Mentee</a>
+            <a href="signup_mentee.html" style="color: #00304e">Mentee</a>
           </h3>
-          <p class="description">bfehfeihiehfil</p>
+          <p class="description">
+            Looking to be mentored by one of the top mentors? Click here!
+          </p>
         </div>
       </div>
     </div>
@@ -74,9 +76,11 @@
       <div style="background-color: #014d7b; border-radius: 10px; padding: 4px">
         <div style="color: #b2e0fd">
           <h3 class="title">
-            <a href="signup.html" style="color: #b2e0fd">Mentor</a>
+            <a href="signup_mentor.html" style="color: #b2e0fd">Mentor</a>
           </h3>
-          <p class="description">ksnkleekgnegeh</p>
+          <p class="description">
+            Looking for a place to guide those looking for guidance? Click here!
+          </p>
         </div>
       </div>
     </div>
