--- a/signup_mentee.html
+++ b/signup_mentee.html
@@ -50,14 +50,16 @@
   </header>
   <!-- End Header -->
 
-  <section class="vh-100" style="background-color: #ffffff">
+  <br />
+
+  <section style="background-color: #ffffff">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
           <div class="card" style="background-color: #bcf1ff">
             <div class="card-body p-5 text-center">
               <h3 class="mb-5" style="font-family: Open Sans; color: #000408">
-                Mentee
+                Signup - Mentee
               </h3>
 
               <form>
@@ -195,7 +197,7 @@
                   </button>
                 </div>
 
-                <p class="text-center" style="margin: 5% 5%; color: #00304e">
+                <p class="text-center" style="margin: 2% 2%; color: #00304e">
                   Have an account?
                   <u><a href="login.html" style="color: #00304e">Log In</a></u>
                 </p>
