--- a/signup_mentor.html
+++ b/signup_mentor.html
@@ -50,14 +50,14 @@
   </header>
   <!-- End Header -->
 
-  <section class="vh-100" style="background-color: #ffffff">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+  <section style="background-color: #ffffff">
+    <div class="container py-5">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-12 col-md-8 col-lg-6 col-lg-5" style="margin-top: 5%">
           <div class="card" style="background-color: #bcf1ff">
             <div class="card-body p-5 text-center">
               <h3 class="mb-5" style="font-family: Open Sans; color: #000408">
-                Mentor
+                Signup - Mentor
               </h3>
 
               <form>
@@ -187,7 +187,7 @@
                     />
                   </div>
                 </div>
-                <div class="form-group" style="margin: 5% 5%">
+                <div class="form-group" style="margin: 2% 3%">
                   <button
                     type="submit"
                     class="btn btn-block"
@@ -197,7 +197,7 @@
                   </button>
                 </div>
 
-                <p class="text-center" style="margin: 5% 5%; color: #00304e">
+                <p class="text-center" style="margin: 2% 2%; color: #00304e">
                   Have an account?
                   <u><a href="login.html" style="color: #00304e">Log In</a></u>
                 </p>
