added view my courses, profile page

--- a/my_courses_mentee.html
+++ b/my_courses_mentee.html
@@ -87,8 +87,11 @@
         <h1 class="logo me-auto"><a href="landing.html">Mentify</a></h1>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#services">Programs</a></li>
+            <li>
+              <a class="nav-link scrollto active" href="dashboard_mentee.html"
+                >Home</a
+              >
+            </li>
             <li><a href="profile_mentee.html">Profile</a></li>
             <li><a href="my_courses_mentee.html">My Courses</a></li>
             <li><a href="">Logout</a></li>
@@ -98,125 +101,13 @@
       </div>
     </header>
     <!-- End Header -->
-
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-      <ol class="carousel-indicators">
-        <li
-          data-bs-target="#myCarousel"
-          data-bs-slide-to="0"
-          class="active"
-        ></li>
-        <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
-        <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
-      </ol>
-
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <a href=""
-            ><div
-              class="overlay-image"
-              style="
-                background-image: url('assets/img/webdev1-removebg-preview.png');
-              "
-            ></div>
-            <div
-              class="container"
-              style="
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                padding-bottom: 50px;
-              "
-            >
-              <h1 style="margin-left: 100px">Data Science</h1>
-              <p style="margin-left: 100px; margin-bottom: 150px">
-                Learn from the best!
-              </p>
-            </div>
-          </a>
-        </div>
-
-        <div class="carousel-item">
-          <a href=""
-            ><div
-              class="overlay-image"
-              style="
-                background-image: url('assets/img/webdev-removebg-preview.png');
-              "
-            ></div>
-            <div
-              class="container"
-              style="
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                padding-bottom: 50px;
-              "
-            >
-              <h1 style="margin-left: 100px">Software Development</h1>
-              <p style="margin-left: 100px; margin-bottom: 150px">
-                Learn from the best!
-              </p>
-            </div>
-          </a>
-        </div>
-
-        <div class="carousel-item">
-          <a href=""
-            ><div
-              class="overlay-image"
-              style="
-                background-image: url('assets/img/ML_img-removebg-preview.png');
-              "
-            ></div>
-            <div
-              class="container"
-              style="
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                padding-bottom: 50px;
-              "
-            >
-              <h1 style="margin-left: 100px">Machine Learning and AI</h1>
-              <p style="margin-left: 100px; margin-bottom: 150px">
-                Learn from the best!
-              </p>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <a
-        href="#myCarousel"
-        class="carousel-control-prev"
-        role="button"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      </a>
-      <a
-        href="#myCarousel"
-        class="carousel-control-next"
-        role="button"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      </a>
-    </div>
-
+    <br />
     <main>
-      <section id="services" class="services section-bg">
+      <section id="services" class="services section-bg" style="margin-top: 6%">
         <div class="container" data-aos="fade-up">
           <header class="section-header">
-            <h3>Mentorship Programs</h3>
-            <p>
-              Sort and filter as per your interests! We offer a variety of
-              programs, and would love to help you find the right one.
-            </p>
+            <h3>My Programs</h3>
+            <p>View all you're programs you've enrolled for.</p>
           </header>
 
           <div class="justify-content-center align-items-center">
