added forgot password elements

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -57,9 +57,9 @@
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
           <div class="card" style="background-color: #bcf1ff">
             <div class="card-body p-5 text-center">
-              <h3 class="mb-5" style="font-family: Open Sans; color: #000408">
-                Welcome Back!
-              </h3>
+              <h5 class="mb-5" style="font-family: Open Sans; color: #000408">
+                Kindly fill this to reset your password.
+              </h5>
 
               <div class="form-outline">
                 <input
@@ -71,12 +71,30 @@
                 <label class="form-label" for="typeEmailX-2"></label>
               </div>
 
+              <div class="form-outline">
+                <input
+                  type="text"
+                  class="form-control form-control-lg"
+                  placeholder="Name"
+                />
+                <label class="form-label" for="typeEmailX-2"></label>
+              </div>
+
               <div class="form-outline mb-1">
                 <input
                   type="password"
                   id="typePasswordX-2"
                   class="form-control form-control-lg"
-                  placeholder="Password"
+                  placeholder="New password"
+                />
+                <label class="form-label" for="typePasswordX-2"></label>
+              </div>
+              <div class="form-outline mb-1">
+                <input
+                  type="password"
+                  id="typePasswordX-2"
+                  class="form-control form-control-lg"
+                  placeholder="Confirm new password"
                 />
                 <label class="form-label" for="typePasswordX-2"></label>
               </div>
@@ -91,23 +109,13 @@
                   ></u
                 >
               </p>
-              <p style="margin-bottom: 3%">
-                Forgot password?
-                <u
-                  ><b
-                    ><a href="forgot_password.html" style="color: #00304e"
-                      >Click here</a
-                    ></b
-                  ></u
-                >
-              </p>
 
               <button
                 class="btn btn-primary btn-md btn-block"
                 type="submit"
                 style="background: #00304e"
               >
-                Login
+                Submit
               </button>
               <!-- <a href="#" class="btn-get-started scrollto" type="submit"
                   >Sign Up</a
