--- a/my_courses_mentee.html
+++ b/my_courses_mentee.html
@@ -37,45 +37,6 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
-  <style>
-    li::marker {
-      font-size: 0;
-    }
-
-    section {
-      padding: 60px 0;
-    }
-
-    .carousel-item {
-      height: 32rem;
-      background: rgb(209, 237, 255);
-      color: rgb(0, 0, 0);
-      position: relative;
-      background-position: center;
-      background-size: 10px;
-    }
-    .overlay-image {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      top: 0;
-      background-position: right center;
-      background-repeat: no-repeat;
-      background-size: 30%;
-      margin-right: 40px;
-    }
-
-    a {
-      text-decoration: inherit;
-      color: inherit;
-      text-decoration: None;
-    }
-    a:hover {
-      text-decoration: none;
-      color: inherit;
-    }
-  </style>
 
   <body>
     <!-- ======= Header ======= -->
@@ -88,9 +49,7 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto active" href="dashboard_mentee.html"
-                >Home</a
-              >
+              <a class="nav-link scrollto" href="dashboard_mentee.html">Home</a>
             </li>
             <li><a href="profile_mentee.html">Profile</a></li>
             <li><a href="my_courses_mentee.html">My Courses</a></li>
@@ -157,7 +116,9 @@
                 <div class="icon" style="background: rgb(209, 237, 255)">
                   <i class="bi bi-briefcase" style="color: #1985f0"></i>
                 </div>
-                <h3 class="title"><a href="">Course Name</a></h3>
+                <h3 class="title">
+                  <a href="my_courses_page_mentee.html">Course Name</a>
+                </h3>
                 <h5 style="font-size: small">Course Duration:</h5>
                 <h5 style="font-size: small">Price: 1000 INR</h5>
                 <p class="description">description of course</p>
@@ -172,7 +133,9 @@
                 <div class="icon" style="background: rgb(209, 237, 255)">
                   <i class="bi bi-bar-chart" style="color: #1985f0"></i>
                 </div>
-                <h3 class="title"><a href="">Course Name</a></h3>
+                <h3 class="title">
+                  <a href="my_courses_page_mentee.html">Course Name</a>
+                </h3>
                 <h5 style="font-size: small">Course Duration:</h5>
                 <h5 style="font-size: small">Price: 1000 INR</h5>
                 <p class="description">description of course</p>
@@ -187,7 +150,9 @@
                 <div class="icon" style="background: rgb(209, 237, 255)">
                   <i class="bi bi-book" style="color: #1985f0"></i>
                 </div>
-                <h3 class="title"><a href="">Course Name</a></h3>
+                <h3 class="title">
+                  <a href="my_courses_page_mentee.html">Course Name</a>
+                </h3>
                 <h5 style="font-size: small">Course Duration:</h5>
                 <h5 style="font-size: small">Price: 1000 INR</h5>
                 <p class="description">description of course</p>
