--- a/course_page_mentee.html
+++ b/course_page_mentee.html
@@ -38,10 +38,6 @@
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
-  <style>
-
-  </style>
-
   <body>
     <!-- ======= Header ======= -->
     <header
@@ -52,7 +48,14 @@
         <h1 class="logo me-auto"><a href="landing.html">Mentify</a></h1>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto active" href="dashboard_mentee.html">Home</a></li>
+            <li>
+              <a class="nav-link scrollto" href="dashboard_mentee.html">Home</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="dashboard_mentee.html"
+                >Programs</a
+              >
+            </li>
             <li><a href="profile_mentee.html">Profile</a></li>
             <li><a href="my_courses_mentee.html">My Courses</a></li>
             <li><a href="">Logout</a></li>
@@ -64,41 +67,53 @@
     <!-- End Header -->
 
     <main>
-      <div class="container rounded bg-white mt-5 mb-5">
-        <div class="row">
-          <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://img.freepik.com/premium-vector/user-profile-icon-flat-style-member-avatar-vector-illustration-isolated-background-human-permission-sign-business-concept_157943-15752.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1710028800&semt=ais"><span class="font-weight-bold">Name</span><span class="text-black-50">Username</span><span> </span></div>
+      <section style="margin-top: 10%">
+        <div class="container" data-aos="fade-up">
+          <header style="text-align: center">
+            <h2>Course Name</h2>
+            <!-- <p>
+              Sort and filter as per your interests! We offer a variety of
+              programs, and would love to help you find the right one.
+            </p> -->
+          </header>
+
+          <div>Start Date:</div>
+          <div>End Date:</div>
+
+          <br />
+
+          <div class="container" style="text-align: center">
+            Enter Description here
           </div>
-          <div class="col-md-8 border-right">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <u><h3 class="text-right">Profile Settings</h3></u>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-md-6"><label class="labels"><b>Name</label><input type="text" class="form-control" placeholder="Full Name" value=""></div>
-            
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Phone Number</b></label><input type="text" class="form-control" placeholder="Phone number" value=""></div>
-                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Email ID</b></label><input type="text" class="form-control" placeholder="Email id" value=""></div>
-                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Education/Experience</b></label><input type="text" class="form-control" placeholder="Institute/company" value=""></div>
-                </div>
-                <div class="col-md-12"><label class="labels" style="margin-top: 4%;"><i>What mentorship I'm looking for/Your interests</i></label><textarea type="text" class="form-control" placeholder="Kindly tell us about what guidance you would like to find through our platform"></textarea></div> <br>
-                <div class="mt-5 text-center"><button class="btn profile-button" type="button" style="color: #ffffff;">Save Profile</button></div>
+
+          <br />
+
+          <div style="text-align: center; font-style: italic">
+            price to enroll: xxx
+          </div>
+
+          <br />
+
+          <div style="text-align: center">
+            <div class="mt-3 text-center">
+              <button
+                class="btn profile-button"
+                type="button"
+                style="color: #ffffff"
+              >
+                Click to pay and enroll
+              </button>
             </div>
           </div>
-      </div>
-
-    </main>
-    <!-- ======= Footer ======= -->
-    <footer id="footer" class="section-bg">
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong>Mentify 2024</strong>
         </div>
-      </div>
-    </footer>
-    <!-- End  Footer -->
+      </section>
+
+      <br />
+
+      <!-- <section>
+        <h2>Feedback</h2>
+      </section> -->
+    </main>
 
     <a
       href="#"
